--- a/style.css
+++ b/style.css
@@ -1,128 +1,149 @@
 html {
-    width : 800px;
+    height : 100%;
+}
+
+* {
+    margin : 0;
+    padding : 0;
+    box-sizing: border-box;
+}
+
+body {
+    height : 100%;
+    display : flex;
+    flex-direction: column;
+}
+body > * {
+    flex : 1;
+    border : 1px solid black;
+}
+
+h1 {
+    color : white;
 }
 
 #product { /*상품*/
-    display : inline-block;
     background-color: #292f2d;
-    width : 800px;
-    margin : auto;
+    border : 3px solid black;
 }
-
-#product > span {
-    font-size : 15px;
-    padding : 15px;
-    color : white;
-    vertical-align:middle;
-}
-
-#product > .delete {  /* 취소 CSS */
-    float : right;
-    color : white;
-}
-
 #food {
     background-color: #3e4648;
-    width : 800px;
-    height : 50px;
+    display : flex;
 }
-
-#food > .yellow {
+.yellow {
+    flex : 1;
+    border : 1px solid black;
     color : yellow;
-    vertical-align:middle;
-    padding : 10px;
+    height : 4rem;
     font-size : 30px;
 }
-
-span > div {
-    float : right;
-    color : white
+main > *{
+    flex : 1;
+    display : flex;
+    flex-direction: column;
 }
 
-.allbutton {/*버튼 CSS*/
+
+#allbutton {
+    background-color: white; 
+}
+.button {/*버튼 CSS*/
+    border : 1px solid black;
     background-color: #3e4648;
     color : yellow;
-    font-size: 19px;
-    display : block;
-    width : 100px;
-    height : 80px;
-}
-#background /* 중앙 메뉴사진배경CSS */
-{
-    background: #dbedff;
-    width : 800px;
-    margin : -2px;
-    overflow: scroll;
+    font-size: 2.5rem;
+    width : 20rem;
+    height : 8rem;
+    padding : 2.2rem;
+    text-align: center;
 }
 
 #recentbutton {
     background-color : gray;
     border-radius:10px;
+    width : 10rem;
+
+}
+footer {
+    background-color: #3e4648;
 }
 
+h4 {
+    text-align: center;
+}
 #list {
     background-color: #3e4648;
-    width : 800px;
-    height : 250px;
+    display: flex;
+    flex : 1;
 }
-#list > span {
-    font-size : 15px;
-    padding : 40px;
-    color : white;
+
+footer {
+    display : flex; 
 }
+
+#choice {
+    display: flex;
+    flex : 2;
+}
+
 
 .productmenu{
     background-color : #5a5d6c;
     color : white;
-    width : 100px;
+    width : 10rem;
     padding : 5px;
-}
-.white {
-    background-color : white;
 }
 
 #addmenu {
-    width : 305px;
-    height : 150px;
-    margin : 5px;
     background-color : white;
 }
 
-div > #card {
-    width : 200px;
-    position: relative;
-    height : 100px;
-    margin : 5px;
+#card {
+    flex : 1;
     background-color : gray;
-    bottom : 190px;
-    left : 350px;
 }
 
 #money {
-    width : 200px;
-    position: relative;
-    top : 85px;
+    width : 20rem;
+    height : 3rem;
 }
 
+#bottom {
+    flex : 2px;
+}
+
+#moniter {
+    background-color: white;
+    width : 30rem;
+    height : 20rem;
+}
+.white {
+    background-color: white;
+    width : 2rem;
+    height : 2rem;
+}
 #price {
     background-color: floralwhite;
     color : white;
-    height : 100px;
+    height : 15rem;
     font-size: 50px;
-    width : 200px;
-    position : relative;
-    float : right;
-    bottom : 310px;
+    width : 30rem;
     border-radius: 5px;
-
 }
+
+#help{
+    display : flex;
+    flex-direction: column;
+    height : 20rem;
+    width : 30rem;
+    text-align: center;
+}
+
 #order {
     background-color: #ed4a5d;
     color : white;
     font-size : 30px;
+    height : 10rem;
     border-radius: 5px;
-    position : relative;
     float : right;
-    bottom : 200px;
-    left : 200px;
 }
