--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
     display : flex;
     flex-direction: column;
 }
+
 body > * {
-    flex : 1;
     border : 1px solid black;
 }
 
@@ -25,56 +25,65 @@ h1 {
 #product { /*상품*/
     background-color: #292f2d;
     border : 3px solid black;
+    display : flex;
 }
+
 #food {
     background-color: #3e4648;
     display : flex;
 }
+
 .yellow {
+    display : flex;
     flex : 1;
     border : 1px solid black;
     color : yellow;
     height : 4rem;
     font-size : 30px;
 }
-main > *{
-    flex : 1;
+
+main{
     display : flex;
-    flex-direction: column;
 }
 
-
-#allbutton {
-    background-color: white; 
-}
 .button {/*버튼 CSS*/
     border : 1px solid black;
     background-color: #3e4648;
     color : yellow;
     font-size: 2.5rem;
     width : 20rem;
-    height : 8rem;
     padding : 2.2rem;
     text-align: center;
+}
+
+footer {
+    background-color: #3e4648;
+}
+
+h3 {
+    font-size: 30px;
+    color : white;
+}
+
+h4 {
+    text-align: center;
+    font-size : 30px;
+}
+
+#orderlist {
+    display : flex;
+    flex-direction: column;
+}
+
+#list {
+    background-color: #3e4648;
+    display: flex;
 }
 
 #recentbutton {
     background-color : gray;
     border-radius:10px;
-    width : 10rem;
-
-}
-footer {
-    background-color: #3e4648;
-}
-
-h4 {
-    text-align: center;
-}
-#list {
-    background-color: #3e4648;
-    display: flex;
-    flex : 1;
+    width : 13rem;
 }
 
 footer {
@@ -86,12 +95,17 @@ footer {
     flex : 2;
 }
 
+#picture {
+    display : flex;
+    flex : 3;
+    background-color: white;
+}
+
 
 .productmenu{
     background-color : #5a5d6c;
     color : white;
-    width : 10rem;
-    padding : 5px;
+    width : 13rem;
 }
 
 #addmenu {
@@ -99,8 +113,11 @@ footer {
 }
 
 #card {
+    display : flex;
+    flex-direction: column;
     flex : 1;
     background-color : gray;
+    border : 2px solid black;
 }
 
 #money {
@@ -110,12 +127,12 @@ footer {
 
 #bottom {
     flex : 2px;
+    border : 2px solid black;
 }
 
 #moniter {
     background-color: white;
-    width : 30rem;
-    height : 20rem;
+    height : 22rem;
 }
 .white {
     background-color: white;
@@ -127,7 +144,6 @@ footer {
     color : white;
     height : 15rem;
     font-size: 50px;
-    width : 30rem;
     border-radius: 5px;
 }
 
@@ -135,7 +151,6 @@ footer {
     display : flex;
     flex-direction: column;
     height : 20rem;
-    width : 30rem;
     text-align: center;
 }
 
