REST API GET으로 데이터 읽어오기

--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@ main{
     display : flex;
 }
 
-.menubutton {/*버튼 CSS*/
+li {/*버튼 CSS*/
     border : 1px solid black;
     background-color: #3e4648;
     color : yellow;
