javascript 줄정리 및 menupicture안에 id class로 변경

--- a/public/style.css
+++ b/public/style.css
@@ -172,12 +172,12 @@ footer {
     padding : 5px;
 }
 
-#all {
+.all {
     display : flex;
     border : 1px solid black;
 }
 
-#count {
+.count {
     width : 320px;
     border : none;
     text-align : center;
