--- a/public/style.css
+++ b/public/style.css
@@ -209,5 +209,10 @@ footer {
 }
 
 .menusize {
-    width : 203px;
+    width : 208px;
+    border : 1px black solid;
+}
+
+#tableline {
+    border : 1px black solid;
 }
